--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,11 +1,12 @@
 #search-query:focus {
   outline: none;
+  border: 2px solid lightblue;
 }
 
 button.navbar-toggler {
-    outline: none;
+  outline: none;
 }
 
 button.navbar-toggler:hover {
-    background: #f7f7f7 !important;
+  background: #f7f7f7 !important;
 }
