Fixed searchbox focus border

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,6 @@
 #search-query:focus {
   outline: none;
-  border: 2px solid lightblue;
+  border: 2px solid lightblue !important;
 }
 
 button.navbar-toggler {
